// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button - enzyme-mount-renderer 1`] = `"<button class=\\"b-btn\\"><span class=\\"b-btn__text\\">Hello</span></button>"`;

exports[`button - enzyme-mount-renderer enzyme-to-json 1`] = `
<button
  className="b-btn"
>
  <span
    className="b-btn__text"
  >
    Hello
  </span>
</button>
`;

exports[`button - enzyme-shallow-renderer 1`] = `"<button class=\\"b-btn\\"><span class=\\"b-btn__text\\">Hello</span></button>"`;

exports[`button - enzyme-shallow-renderer enzyme-to-json 1`] = `
<button
  className="b-btn"
>
  <span
    className="b-btn__text"
  >
    Hello
  </span>
</button>
`;

exports[`button - enzyme-static-renderer 1`] = `"<span class=\\"b-btn__text\\">Hello</span>"`;

exports[`button - enzyme-static-renderer enzyme-to-json 1`] = `
<button
  class="b-btn"
>
  <span
    class="b-btn__text"
  >
    Hello
  </span>
</button>
`;

exports[`button - react-test-renderer 1`] = `
<button
  className="b-btn"
>
  <span
    className="b-btn__text"
  >
    Hello
  </span>
</button>
`;

exports[`button - react-test-renderer toJSON 1`] = `
<button
  className="b-btn"
>
  <span
    className="b-btn__text"
  >
    Hello
  </span>
</button>
`;

exports[`button - react-test-renderer toTree 1`] = `
Object {
  "instance": null,
  "nodeType": "component",
  "props": Object {
    "children": "Hello",
  },
  "rendered": Object {
    "instance": null,
    "nodeType": "host",
    "props": Object {
      "children": <span
        className="b-btn__text"
      >
        Hello
      </span>,
      "className": "b-btn",
    },
    "rendered": Array [
      Object {
        "instance": null,
        "nodeType": "host",
        "props": Object {
          "children": "Hello",
          "className": "b-btn__text",
        },
        "rendered": Array [
          "Hello",
        ],
        "type": "span",
      },
    ],
    "type": "button",
  },
  "type": [Function],
}
`;

exports[`button - reactDOMServer.renderToStaticMarkup 1`] = `"<button class=\\"b-btn\\"><span class=\\"b-btn__text\\">Hello</span></button>"`;

exports[`input - enzyme-mount-renderer 1`] = `"<div class=\\"b-container\\"><div class=\\"b-input\\"><input class=\\"b-input__input\\" value=\\"Type here\\"><button class=\\"b-btn\\"><span class=\\"b-btn__text\\">Send</span></button></div></div>"`;

exports[`input - enzyme-mount-renderer enzyme-to-json 1`] = `
<div
  className="b-container"
>
  <div
    className="b-input"
  >
    <input
      className="b-input__input"
      defaultValue="Type here"
    />
    <button
      className="b-btn"
    >
      <span
        className="b-btn__text"
      >
        Send
      </span>
    </button>
  </div>
</div>
`;

exports[`input - enzyme-shallow-renderer 1`] = `"<div class=\\"b-container\\"><div class=\\"b-input\\"><input class=\\"b-input__input\\" value=\\"Type here\\"/><button class=\\"b-btn\\"><span class=\\"b-btn__text\\">Send</span></button></div></div>"`;

exports[`input - enzyme-shallow-renderer enzyme-to-json 1`] = `
<div
  className="b-container"
>
  <Input
    buttonText="Send"
    defaultValue="Type here"
  />
</div>
`;

exports[`input - enzyme-static-renderer 1`] = `"<div class=\\"b-input\\"><input class=\\"b-input__input\\" value=\\"Type here\\"><button class=\\"b-btn\\"><span class=\\"b-btn__text\\">Send</span></button></div>"`;

exports[`input - enzyme-static-renderer enzyme-to-json 1`] = `
<div
  class="b-container"
>
  <div
    class="b-input"
  >
    <input
      class="b-input__input"
      value="Type here"
    />
    <button
      class="b-btn"
    >
      <span
        class="b-btn__text"
      >
        Send
      </span>
    </button>
  </div>
</div>
`;

exports[`input - react-test-renderer 1`] = `
<div
  className="b-container"
>
  <div
    className="b-input"
  >
    <input
      className="b-input__input"
      defaultValue="Type here"
    />
    <button
      className="b-btn"
    >
      <span
        className="b-btn__text"
      >
        Send
      </span>
    </button>
  </div>
</div>
`;

exports[`input - react-test-renderer toJSON 1`] = `
<div
  className="b-container"
>
  <div
    className="b-input"
  >
    <input
      className="b-input__input"
      defaultValue="Type here"
    />
    <button
      className="b-btn"
    >
      <span
        className="b-btn__text"
      >
        Send
      </span>
    </button>
  </div>
</div>
`;

exports[`input - react-test-renderer toTree 1`] = `
Object {
  "instance": null,
  "nodeType": "host",
  "props": Object {
    "children": <Input
      buttonText="Send"
      defaultValue="Type here"
    />,
    "className": "b-container",
  },
  "rendered": Array [
    Object {
      "instance": Input {
        "_reactInternalFiber": FiberNode {
          "_debugID": 42,
          "_debugIsCurrentlyTiming": false,
          "_debugOwner": null,
          "_debugSource": null,
          "alternate": null,
          "child": FiberNode {
            "_debugID": 43,
            "_debugIsCurrentlyTiming": false,
            "_debugOwner": [Circular],
            "_debugSource": null,
            "alternate": null,
            "child": FiberNode {
              "_debugID": 44,
              "_debugIsCurrentlyTiming": false,
              "_debugOwner": [Circular],
              "_debugSource": null,
              "alternate": null,
              "child": null,
              "effectTag": 0,
              "expirationTime": 0,
              "firstEffect": null,
              "index": 0,
              "key": null,
              "lastEffect": null,
              "memoizedProps": Object {
                "className": "b-input__input",
                "defaultValue": "Type here",
              },
              "memoizedState": null,
              "mode": 0,
              "nextEffect": null,
              "pendingProps": Object {
                "className": "b-input__input",
                "defaultValue": "Type here",
              },
              "ref": null,
              "return": [Circular],
              "sibling": FiberNode {
                "_debugID": 45,
                "_debugIsCurrentlyTiming": false,
                "_debugOwner": [Circular],
                "_debugSource": null,
                "alternate": null,
                "child": FiberNode {
                  "_debugID": 46,
                  "_debugIsCurrentlyTiming": false,
                  "_debugOwner": [Circular],
                  "_debugSource": null,
                  "alternate": null,
                  "child": FiberNode {
                    "_debugID": 47,
                    "_debugIsCurrentlyTiming": false,
                    "_debugOwner": [Circular],
                    "_debugSource": null,
                    "alternate": null,
                    "child": FiberNode {
                      "_debugID": 48,
                      "_debugIsCurrentlyTiming": false,
                      "_debugOwner": null,
                      "_debugSource": null,
                      "alternate": null,
                      "child": null,
                      "effectTag": 0,
                      "expirationTime": 0,
                      "firstEffect": null,
                      "index": 0,
                      "key": null,
                      "lastEffect": null,
                      "memoizedProps": "Send",
                      "memoizedState": null,
                      "mode": 0,
                      "nextEffect": null,
                      "pendingProps": "Send",
                      "ref": null,
                      "return": [Circular],
                      "sibling": null,
                      "stateNode": Object {
                        "tag": "TEXT",
                        "text": "Send",
                      },
                      "tag": 6,
                      "type": null,
                      "updateQueue": null,
                    },
                    "effectTag": 0,
                    "expirationTime": 0,
                    "firstEffect": null,
                    "index": 0,
                    "key": null,
                    "lastEffect": null,
                    "memoizedProps": Object {
                      "children": "Send",
                      "className": "b-btn__text",
                    },
                    "memoizedState": null,
                    "mode": 0,
                    "nextEffect": null,
                    "pendingProps": Object {
                      "children": "Send",
                      "className": "b-btn__text",
                    },
                    "ref": null,
                    "return": [Circular],
                    "sibling": null,
                    "stateNode": Object {
                      "children": Array [
                        Object {
                          "tag": "TEXT",
                          "text": "Send",
                        },
                      ],
                      "props": Object {
                        "children": "Send",
                        "className": "b-btn__text",
                      },
                      "rootContainerInstance": Object {
                        "children": Array [
                          Object {
                            "children": Array [
                              Object {
                                "children": Array [
                                  Object {
                                    "children": Array [],
                                    "props": Object {
                                      "className": "b-input__input",
                                      "defaultValue": "Type here",
                                    },
                                    "rootContainerInstance": [Circular],
                                    "tag": "INSTANCE",
                                    "type": "input",
                                  },
                                  Object {
                                    "children": Array [
                                      [Circular],
                                    ],
                                    "props": Object {
                                      "children": <span
                                        className="b-btn__text"
                                      >
                                        Send
                                      </span>,
                                      "className": "b-btn",
                                    },
                                    "rootContainerInstance": [Circular],
                                    "tag": "INSTANCE",
                                    "type": "button",
                                  },
                                ],
                                "props": Object {
                                  "children": Array [
                                    <input
                                      className="b-input__input"
                                      defaultValue="Type here"
                                    />,
                                    <Unknown>
                                      Send
                                    </Unknown>,
                                  ],
                                  "className": "b-input",
                                },
                                "rootContainerInstance": [Circular],
                                "tag": "INSTANCE",
                                "type": "div",
                              },
                            ],
                            "props": Object {
                              "children": <Input
                                buttonText="Send"
                                defaultValue="Type here"
                              />,
                              "className": "b-container",
                            },
                            "rootContainerInstance": [Circular],
                            "tag": "INSTANCE",
                            "type": "div",
                          },
                        ],
                        "createNodeMock": [Function],
                        "tag": "CONTAINER",
                      },
                      "tag": "INSTANCE",
                      "type": "span",
                    },
                    "tag": 5,
                    "type": "span",
                    "updateQueue": null,
                  },
                  "effectTag": 0,
                  "expirationTime": 0,
                  "firstEffect": null,
                  "index": 0,
                  "key": null,
                  "lastEffect": null,
                  "memoizedProps": Object {
                    "children": <span
                      className="b-btn__text"
                    >
                      Send
                    </span>,
                    "className": "b-btn",
                  },
                  "memoizedState": null,
                  "mode": 0,
                  "nextEffect": null,
                  "pendingProps": Object {
                    "children": <span
                      className="b-btn__text"
                    >
                      Send
                    </span>,
                    "className": "b-btn",
                  },
                  "ref": null,
                  "return": [Circular],
                  "sibling": null,
                  "stateNode": Object {
                    "children": Array [
                      Object {
                        "children": Array [
                          Object {
                            "tag": "TEXT",
                            "text": "Send",
                          },
                        ],
                        "props": Object {
                          "children": "Send",
                          "className": "b-btn__text",
                        },
                        "rootContainerInstance": Object {
                          "children": Array [
                            Object {
                              "children": Array [
                                Object {
                                  "children": Array [
                                    Object {
                                      "children": Array [],
                                      "props": Object {
                                        "className": "b-input__input",
                                        "defaultValue": "Type here",
                                      },
                                      "rootContainerInstance": [Circular],
                                      "tag": "INSTANCE",
                                      "type": "input",
                                    },
                                    [Circular],
                                  ],
                                  "props": Object {
                                    "children": Array [
                                      <input
                                        className="b-input__input"
                                        defaultValue="Type here"
                                      />,
                                      <Unknown>
                                        Send
                                      </Unknown>,
                                    ],
                                    "className": "b-input",
                                  },
                                  "rootContainerInstance": [Circular],
                                  "tag": "INSTANCE",
                                  "type": "div",
                                },
                              ],
                              "props": Object {
                                "children": <Input
                                  buttonText="Send"
                                  defaultValue="Type here"
                                />,
                                "className": "b-container",
                              },
                              "rootContainerInstance": [Circular],
                              "tag": "INSTANCE",
                              "type": "div",
                            },
                          ],
                          "createNodeMock": [Function],
                          "tag": "CONTAINER",
                        },
                        "tag": "INSTANCE",
                        "type": "span",
                      },
                    ],
                    "props": Object {
                      "children": <span
                        className="b-btn__text"
                      >
                        Send
                      </span>,
                      "className": "b-btn",
                    },
                    "rootContainerInstance": Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            Object {
                              "children": Array [
                                Object {
                                  "children": Array [],
                                  "props": Object {
                                    "className": "b-input__input",
                                    "defaultValue": "Type here",
                                  },
                                  "rootContainerInstance": [Circular],
                                  "tag": "INSTANCE",
                                  "type": "input",
                                },
                                [Circular],
                              ],
                              "props": Object {
                                "children": Array [
                                  <input
                                    className="b-input__input"
                                    defaultValue="Type here"
                                  />,
                                  <Unknown>
                                    Send
                                  </Unknown>,
                                ],
                                "className": "b-input",
                              },
                              "rootContainerInstance": [Circular],
                              "tag": "INSTANCE",
                              "type": "div",
                            },
                          ],
                          "props": Object {
                            "children": <Input
                              buttonText="Send"
                              defaultValue="Type here"
                            />,
                            "className": "b-container",
                          },
                          "rootContainerInstance": [Circular],
                          "tag": "INSTANCE",
                          "type": "div",
                        },
                      ],
                      "createNodeMock": [Function],
                      "tag": "CONTAINER",
                    },
                    "tag": "INSTANCE",
                    "type": "button",
                  },
                  "tag": 5,
                  "type": "button",
                  "updateQueue": null,
                },
                "effectTag": 1,
                "expirationTime": 0,
                "firstEffect": null,
                "index": 1,
                "key": null,
                "lastEffect": null,
                "memoizedProps": Object {
                  "children": "Send",
                },
                "memoizedState": null,
                "mode": 0,
                "nextEffect": null,
                "pendingProps": Object {
                  "children": "Send",
                },
                "ref": null,
                "return": [Circular],
                "sibling": null,
                "stateNode": null,
                "tag": 1,
                "type": [Function],
                "updateQueue": null,
              },
              "stateNode": Object {
                "children": Array [],
                "props": Object {
                  "className": "b-input__input",
                  "defaultValue": "Type here",
                },
                "rootContainerInstance": Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            [Circular],
                            Object {
                              "children": Array [
                                Object {
                                  "children": Array [
                                    Object {
                                      "tag": "TEXT",
                                      "text": "Send",
                                    },
                                  ],
                                  "props": Object {
                                    "children": "Send",
                                    "className": "b-btn__text",
                                  },
                                  "rootContainerInstance": [Circular],
                                  "tag": "INSTANCE",
                                  "type": "span",
                                },
                              ],
                              "props": Object {
                                "children": <span
                                  className="b-btn__text"
                                >
                                  Send
                                </span>,
                                "className": "b-btn",
                              },
                              "rootContainerInstance": [Circular],
                              "tag": "INSTANCE",
                              "type": "button",
                            },
                          ],
                          "props": Object {
                            "children": Array [
                              <input
                                className="b-input__input"
                                defaultValue="Type here"
                              />,
                              <Unknown>
                                Send
                              </Unknown>,
                            ],
                            "className": "b-input",
                          },
                          "rootContainerInstance": [Circular],
                          "tag": "INSTANCE",
                          "type": "div",
                        },
                      ],
                      "props": Object {
                        "children": <Input
                          buttonText="Send"
                          defaultValue="Type here"
                        />,
                        "className": "b-container",
                      },
                      "rootContainerInstance": [Circular],
                      "tag": "INSTANCE",
                      "type": "div",
                    },
                  ],
                  "createNodeMock": [Function],
                  "tag": "CONTAINER",
                },
                "tag": "INSTANCE",
                "type": "input",
              },
              "tag": 5,
              "type": "input",
              "updateQueue": null,
            },
            "effectTag": 0,
            "expirationTime": 0,
            "firstEffect": null,
            "index": 0,
            "key": null,
            "lastEffect": null,
            "memoizedProps": Object {
              "children": Array [
                <input
                  className="b-input__input"
                  defaultValue="Type here"
                />,
                <Unknown>
                  Send
                </Unknown>,
              ],
              "className": "b-input",
            },
            "memoizedState": null,
            "mode": 0,
            "nextEffect": null,
            "pendingProps": Object {
              "children": Array [
                <input
                  className="b-input__input"
                  defaultValue="Type here"
                />,
                <Unknown>
                  Send
                </Unknown>,
              ],
              "className": "b-input",
            },
            "ref": null,
            "return": [Circular],
            "sibling": null,
            "stateNode": Object {
              "children": Array [
                Object {
                  "children": Array [],
                  "props": Object {
                    "className": "b-input__input",
                    "defaultValue": "Type here",
                  },
                  "rootContainerInstance": Object {
                    "children": Array [
                      Object {
                        "children": Array [
                          [Circular],
                        ],
                        "props": Object {
                          "children": <Input
                            buttonText="Send"
                            defaultValue="Type here"
                          />,
                          "className": "b-container",
                        },
                        "rootContainerInstance": [Circular],
                        "tag": "INSTANCE",
                        "type": "div",
                      },
                    ],
                    "createNodeMock": [Function],
                    "tag": "CONTAINER",
                  },
                  "tag": "INSTANCE",
                  "type": "input",
                },
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "tag": "TEXT",
                          "text": "Send",
                        },
                      ],
                      "props": Object {
                        "children": "Send",
                        "className": "b-btn__text",
                      },
                      "rootContainerInstance": Object {
                        "children": Array [
                          Object {
                            "children": Array [
                              [Circular],
                            ],
                            "props": Object {
                              "children": <Input
                                buttonText="Send"
                                defaultValue="Type here"
                              />,
                              "className": "b-container",
                            },
                            "rootContainerInstance": [Circular],
                            "tag": "INSTANCE",
                            "type": "div",
                          },
                        ],
                        "createNodeMock": [Function],
                        "tag": "CONTAINER",
                      },
                      "tag": "INSTANCE",
                      "type": "span",
                    },
                  ],
                  "props": Object {
                    "children": <span
                      className="b-btn__text"
                    >
                      Send
                    </span>,
                    "className": "b-btn",
                  },
                  "rootContainerInstance": Object {
                    "children": Array [
                      Object {
                        "children": Array [
                          [Circular],
                        ],
                        "props": Object {
                          "children": <Input
                            buttonText="Send"
                            defaultValue="Type here"
                          />,
                          "className": "b-container",
                        },
                        "rootContainerInstance": [Circular],
                        "tag": "INSTANCE",
                        "type": "div",
                      },
                    ],
                    "createNodeMock": [Function],
                    "tag": "CONTAINER",
                  },
                  "tag": "INSTANCE",
                  "type": "button",
                },
              ],
              "props": Object {
                "children": Array [
                  <input
                    className="b-input__input"
                    defaultValue="Type here"
                  />,
                  <Unknown>
                    Send
                  </Unknown>,
                ],
                "className": "b-input",
              },
              "rootContainerInstance": Object {
                "children": Array [
                  Object {
                    "children": Array [
                      [Circular],
                    ],
                    "props": Object {
                      "children": <Input
                        buttonText="Send"
                        defaultValue="Type here"
                      />,
                      "className": "b-container",
                    },
                    "rootContainerInstance": [Circular],
                    "tag": "INSTANCE",
                    "type": "div",
                  },
                ],
                "createNodeMock": [Function],
                "tag": "CONTAINER",
              },
              "tag": "INSTANCE",
              "type": "div",
            },
            "tag": 5,
            "type": "div",
            "updateQueue": null,
          },
          "effectTag": 1,
          "expirationTime": 0,
          "firstEffect": null,
          "index": 0,
          "key": null,
          "lastEffect": null,
          "memoizedProps": Object {
            "buttonText": "Send",
            "defaultValue": "Type here",
          },
          "memoizedState": null,
          "mode": 0,
          "nextEffect": null,
          "pendingProps": Object {
            "buttonText": "Send",
            "defaultValue": "Type here",
          },
          "ref": null,
          "return": FiberNode {
            "_debugID": 41,
            "_debugIsCurrentlyTiming": false,
            "_debugOwner": null,
            "_debugSource": null,
            "alternate": null,
            "child": [Circular],
            "effectTag": 0,
            "expirationTime": 0,
            "firstEffect": null,
            "index": 0,
            "key": null,
            "lastEffect": null,
            "memoizedProps": Object {
              "children": <Input
                buttonText="Send"
                defaultValue="Type here"
              />,
              "className": "b-container",
            },
            "memoizedState": null,
            "mode": 0,
            "nextEffect": null,
            "pendingProps": Object {
              "children": <Input
                buttonText="Send"
                defaultValue="Type here"
              />,
              "className": "b-container",
            },
            "ref": null,
            "return": FiberNode {
              "_debugID": 39,
              "_debugIsCurrentlyTiming": false,
              "_debugOwner": null,
              "_debugSource": null,
              "alternate": FiberNode {
                "_debugID": 39,
                "_debugIsCurrentlyTiming": false,
                "_debugOwner": null,
                "_debugSource": null,
                "alternate": [Circular],
                "child": null,
                "effectTag": 0,
                "expirationTime": 1,
                "firstEffect": null,
                "index": 0,
                "key": null,
                "lastEffect": null,
                "memoizedProps": null,
                "memoizedState": null,
                "mode": 0,
                "nextEffect": null,
                "pendingProps": null,
                "ref": null,
                "return": null,
                "sibling": null,
                "stateNode": Object {
                  "containerInfo": Object {
                    "children": Array [
                      Object {
                        "children": Array [
                          Object {
                            "children": Array [
                              Object {
                                "children": Array [],
                                "props": Object {
                                  "className": "b-input__input",
                                  "defaultValue": "Type here",
                                },
                                "rootContainerInstance": [Circular],
                                "tag": "INSTANCE",
                                "type": "input",
                              },
                              Object {
                                "children": Array [
                                  Object {
                                    "children": Array [
                                      Object {
                                        "tag": "TEXT",
                                        "text": "Send",
                                      },
                                    ],
                                    "props": Object {
                                      "children": "Send",
                                      "className": "b-btn__text",
                                    },
                                    "rootContainerInstance": [Circular],
                                    "tag": "INSTANCE",
                                    "type": "span",
                                  },
                                ],
                                "props": Object {
                                  "children": <span
                                    className="b-btn__text"
                                  >
                                    Send
                                  </span>,
                                  "className": "b-btn",
                                },
                                "rootContainerInstance": [Circular],
                                "tag": "INSTANCE",
                                "type": "button",
                              },
                            ],
                            "props": Object {
                              "children": Array [
                                <input
                                  className="b-input__input"
                                  defaultValue="Type here"
                                />,
                                <Unknown>
                                  Send
                                </Unknown>,
                              ],
                              "className": "b-input",
                            },
                            "rootContainerInstance": [Circular],
                            "tag": "INSTANCE",
                            "type": "div",
                          },
                        ],
                        "props": Object {
                          "children": <Input
                            buttonText="Send"
                            defaultValue="Type here"
                          />,
                          "className": "b-container",
                        },
                        "rootContainerInstance": [Circular],
                        "tag": "INSTANCE",
                        "type": "div",
                      },
                    ],
                    "createNodeMock": [Function],
                    "tag": "CONTAINER",
                  },
                  "context": Object {},
                  "current": [Circular],
                  "finishedWork": null,
                  "firstBatch": null,
                  "hydrate": false,
                  "nextScheduledRoot": null,
                  "pendingChildren": null,
                  "pendingCommitExpirationTime": 0,
                  "pendingContext": null,
                  "remainingExpirationTime": 0,
                },
                "tag": 3,
                "type": null,
                "updateQueue": Object {
                  "baseState": null,
                  "callbackList": null,
                  "capturedValues": null,
                  "expirationTime": 1,
                  "first": Object {
                    "callback": null,
                    "capturedValue": null,
                    "expirationTime": 1,
                    "isForced": false,
                    "isReplace": false,
                    "next": null,
                    "partialState": Object {
                      "element": <div
                        className="b-container"
                      >
                        <Input
                          buttonText="Send"
                          defaultValue="Type here"
                        />
                      </div>,
                    },
                  },
                  "hasForceUpdate": false,
                  "isInitialized": false,
                  "isProcessing": false,
                  "last": Object {
                    "callback": null,
                    "capturedValue": null,
                    "expirationTime": 1,
                    "isForced": false,
                    "isReplace": false,
                    "next": null,
                    "partialState": Object {
                      "element": <div
                        className="b-container"
                      >
                        <Input
                          buttonText="Send"
                          defaultValue="Type here"
                        />
                      </div>,
                    },
                  },
                },
              },
              "child": [Circular],
              "effectTag": 0,
              "expirationTime": 0,
              "firstEffect": [Circular],
              "index": 0,
              "key": null,
              "lastEffect": [Circular],
              "memoizedProps": null,
              "memoizedState": Object {
                "element": <div
                  className="b-container"
                >
                  <Input
                    buttonText="Send"
                    defaultValue="Type here"
                  />
                </div>,
              },
              "mode": 0,
              "nextEffect": null,
              "pendingProps": null,
              "ref": null,
              "return": null,
              "sibling": null,
              "stateNode": Object {
                "containerInfo": Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            Object {
                              "children": Array [],
                              "props": Object {
                                "className": "b-input__input",
                                "defaultValue": "Type here",
                              },
                              "rootContainerInstance": [Circular],
                              "tag": "INSTANCE",
                              "type": "input",
                            },
                            Object {
                              "children": Array [
                                Object {
                                  "children": Array [
                                    Object {
                                      "tag": "TEXT",
                                      "text": "Send",
                                    },
                                  ],
                                  "props": Object {
                                    "children": "Send",
                                    "className": "b-btn__text",
                                  },
                                  "rootContainerInstance": [Circular],
                                  "tag": "INSTANCE",
                                  "type": "span",
                                },
                              ],
                              "props": Object {
                                "children": <span
                                  className="b-btn__text"
                                >
                                  Send
                                </span>,
                                "className": "b-btn",
                              },
                              "rootContainerInstance": [Circular],
                              "tag": "INSTANCE",
                              "type": "button",
                            },
                          ],
                          "props": Object {
                            "children": Array [
                              <input
                                className="b-input__input"
                                defaultValue="Type here"
                              />,
                              <Unknown>
                                Send
                              </Unknown>,
                            ],
                            "className": "b-input",
                          },
                          "rootContainerInstance": [Circular],
                          "tag": "INSTANCE",
                          "type": "div",
                        },
                      ],
                      "props": Object {
                        "children": <Input
                          buttonText="Send"
                          defaultValue="Type here"
                        />,
                        "className": "b-container",
                      },
                      "rootContainerInstance": [Circular],
                      "tag": "INSTANCE",
                      "type": "div",
                    },
                  ],
                  "createNodeMock": [Function],
                  "tag": "CONTAINER",
                },
                "context": Object {},
                "current": [Circular],
                "finishedWork": null,
                "firstBatch": null,
                "hydrate": false,
                "nextScheduledRoot": null,
                "pendingChildren": null,
                "pendingCommitExpirationTime": 0,
                "pendingContext": null,
                "remainingExpirationTime": 0,
              },
              "tag": 3,
              "type": null,
              "updateQueue": null,
            },
            "sibling": null,
            "stateNode": Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "children": Array [],
                      "props": Object {
                        "className": "b-input__input",
                        "defaultValue": "Type here",
                      },
                      "rootContainerInstance": Object {
                        "children": Array [
                          [Circular],
                        ],
                        "createNodeMock": [Function],
                        "tag": "CONTAINER",
                      },
                      "tag": "INSTANCE",
                      "type": "input",
                    },
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            Object {
                              "tag": "TEXT",
                              "text": "Send",
                            },
                          ],
                          "props": Object {
                            "children": "Send",
                            "className": "b-btn__text",
                          },
                          "rootContainerInstance": Object {
                            "children": Array [
                              [Circular],
                            ],
                            "createNodeMock": [Function],
                            "tag": "CONTAINER",
                          },
                          "tag": "INSTANCE",
                          "type": "span",
                        },
                      ],
                      "props": Object {
                        "children": <span
                          className="b-btn__text"
                        >
                          Send
                        </span>,
                        "className": "b-btn",
                      },
                      "rootContainerInstance": Object {
                        "children": Array [
                          [Circular],
                        ],
                        "createNodeMock": [Function],
                        "tag": "CONTAINER",
                      },
                      "tag": "INSTANCE",
                      "type": "button",
                    },
                  ],
                  "props": Object {
                    "children": Array [
                      <input
                        className="b-input__input"
                        defaultValue="Type here"
                      />,
                      <Unknown>
                        Send
                      </Unknown>,
                    ],
                    "className": "b-input",
                  },
                  "rootContainerInstance": Object {
                    "children": Array [
                      [Circular],
                    ],
                    "createNodeMock": [Function],
                    "tag": "CONTAINER",
                  },
                  "tag": "INSTANCE",
                  "type": "div",
                },
              ],
              "props": Object {
                "children": <Input
                  buttonText="Send"
                  defaultValue="Type here"
                />,
                "className": "b-container",
              },
              "rootContainerInstance": Object {
                "children": Array [
                  [Circular],
                ],
                "createNodeMock": [Function],
                "tag": "CONTAINER",
              },
              "tag": "INSTANCE",
              "type": "div",
            },
            "tag": 5,
            "type": "div",
            "updateQueue": null,
          },
          "sibling": null,
          "stateNode": [Circular],
          "tag": 2,
          "type": [Function],
          "updateQueue": null,
        },
        "_reactInternalInstance": Object {},
        "context": Object {},
        "props": Object {
          "buttonText": "Send",
          "defaultValue": "Type here",
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
        },
      },
      "nodeType": "component",
      "props": Object {
        "buttonText": "Send",
        "defaultValue": "Type here",
      },
      "rendered": Object {
        "instance": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <input
              className="b-input__input"
              defaultValue="Type here"
            />,
            <Unknown>
              Send
            </Unknown>,
          ],
          "className": "b-input",
        },
        "rendered": Array [
          Object {
            "instance": null,
            "nodeType": "host",
            "props": Object {
              "className": "b-input__input",
              "defaultValue": "Type here",
            },
            "rendered": Array [],
            "type": "input",
          },
          Object {
            "instance": null,
            "nodeType": "component",
            "props": Object {
              "children": "Send",
            },
            "rendered": Object {
              "instance": null,
              "nodeType": "host",
              "props": Object {
                "children": <span
                  className="b-btn__text"
                >
                  Send
                </span>,
                "className": "b-btn",
              },
              "rendered": Array [
                Object {
                  "instance": null,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Send",
                    "className": "b-btn__text",
                  },
                  "rendered": Array [
                    "Send",
                  ],
                  "type": "span",
                },
              ],
              "type": "button",
            },
            "type": [Function],
          },
        ],
        "type": "div",
      },
      "type": [Function],
    },
  ],
  "type": "div",
}
`;

exports[`input - reactDOMServer.renderToStaticMarkup 1`] = `"<div class=\\"b-container\\"><div class=\\"b-input\\"><input class=\\"b-input__input\\" value=\\"Type here\\"/><button class=\\"b-btn\\"><span class=\\"b-btn__text\\">Send</span></button></div></div>"`;
